--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
     <!-- SECCION NAV -->
     <nav class="contenido-nav">
         <div class="logo">
-            <img src="./assets/logo/spartan-logo-png.png" alt="">
+            <img src="./assets/imgs/pngaaa.com-1346939.png" alt="">
         </div>
-        <div class="menu">
+        <div class="menu" id="menu">
+            <div class="cerrar-menu" id="cerrar">
+                <img src="./assets/imgs/cerrarmenu.png" alt="">
+            </div>
             <a href="./index.html" id="_items">Inicio</a>
             <a href="./nosotros.html" id="_items">Sobre Nosotros</a>
             <a href="./actividades.html" id="_items">Actividades</a><!--falta poner enlace-->
             <a href="./contacto.html" id="_items">Contacto</a>
         </div>
-        <div class="nav_toggle" id="_toggle"><!--se puede quitar el id-->
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="abrir-menu" id="abrir"><!--se puede quitar el id-->
+           <img src="./assets/imgs/cerrarMenu-.png" alt="">
         </div>
     </nav>
     <!-- HEADER -->
