--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            
             </div>
             <div class="contenido-header">
-                <h1>Spartan Fitness Club</h1>
+                <h1>Elite Fitness Club</h1>
                  <h2>¡Entrena con Nosotros!</h2>
                  <p>Consigue el Físico que deseas, con nuestros entrenamientos personalizados</p>
                 <button>Horario de clases</button>
