--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="contenedor-main">
             <div class="imagen-main">
                 <img src="./assets/imgs/gym.jpg" alt="">
+                <button> + Salas</button>
             </div>    
             <div class="texto-main">
                 <h1>Nuestras Instalaciones</h1>
