--- a/nosotros.html
+++ b/nosotros.html
@@ -57,7 +57,7 @@
             repellendus beatae.</p>
         </article>
         <div class="img-nosotros">
-            <img src="./assets/logo/spartan-logo-png.png" alt="">
+            <img src="./assets/imgs/pngaaa.com-1346939.png" alt="">
         </div>
     </main>
 
