--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <!-- MAIN -->
     <main>
         <div class="contenedor-main">
-            <div class="imagen-main">
+            <div class="imagen-main" id="imagen-main">
                 <img src="./assets/imgs/gym.jpg" alt="">
                 <button> + Salas</button>
             </div>    
-            <div class="texto-main">
+            <div class="texto-main" id="texto-main">
                 <h1>Nuestras Instalaciones</h1>
                   <p>✔️ Sala de Musculación</p>
                   <p>✔️ Sala de Actividades</p>
