--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <!-- HEADER -->
     <header>
         <div class="contenedor-header">
-            <div class="clip">
+            <div class="img-header">
+                
+            </div>
+            <!-- <div class="clip">
                 <video autoplay loop muted>
                     <source src="./assets/imgs/clipHeader.mp4">
                 </video>
            
-            </div>
+            </div> -->
             <div class="contenido-header">
                 <h1>Elite Fitness Club</h1>
                  <h2>¡Entrena con Nosotros!</h2>
